test/modules/cassella/ambigmodmain.mainModule.good
error: Ambiguous main() function (use --main-module to disambiguate):
ambigmodmain.mainModule.chpl:3: note: in module M
ambigmodmain.mainModule.chpl:9: note: in module M
