test/modules/cassella/ambigmodmain.compopts
                  # ambigmodmain.good
--main-module M   # ambigmodmain.M.good
--main-module X.M # ambigmodmain.X.good
--main-module Y.M # ambigmodmain.Y.good
